Fix dispute info vertical spacing

--- a/client/disputes/info/style.scss
+++ b/client/disputes/info/style.scss
@@ -1,5 +1,4 @@
 .wcpay-dispute-info-item {
-	margin-top: 4px;
 	&:first-child {
 		margin-top: 0;
 	}
